--- a/src/assets/css/business/mini.scss
+++ b/src/assets/css/business/mini.scss
@@ -16,6 +16,7 @@
             grid-column-gap: 15px;
             column-gap: 15px;
                .group-block{
+                padding-bottom: 50px;
                    img{
                     background-color: cornflowerblue;
                     width: 100%;
