--- a/src/assets/css/footer/mini.scss
+++ b/src/assets/css/footer/mini.scss
@@ -32,7 +32,7 @@
 
                     .item-group {
                         width: 100%;
-                        padding: 30px;
+                        padding:15px 30px;
 
                         div {
                             font-size: 18px;
@@ -55,9 +55,10 @@
 
                     .info-wrap {
                         width: 100%;
-                        padding: 30px;
+                        padding:15px 30px;
 
                         .item-info {
+                            padding: 15px 0;
                             .content {}
 
                             .title {
