--- a/src/assets/css/footer/pc.scss
+++ b/src/assets/css/footer/pc.scss
@@ -64,6 +64,7 @@
                         padding: 30px;
 
                         .item-info {
+                            padding: 15px 0;
                             .content {}
 
                             .title {
