--- a/src/assets/css/business/pc.scss
+++ b/src/assets/css/business/pc.scss
@@ -17,11 +17,13 @@
         column-gap: 24px;
            .group-block{
                img{
-                background-color: cornflowerblue;
                 width: 100%;
-                height: 180px;
-                margin-bottom: 35px;
-                border-radius: 15px;
+                    height: 180px;
+                    margin-bottom: 35px;
+                    border-radius: 15px;
+                    background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
                }
                .business-title{
                 font-weight: 700;
