--- a/src/assets/css/business/phone.scss
+++ b/src/assets/css/business/phone.scss
@@ -2,7 +2,7 @@
     .business{
         width: 80%;
         margin: 0 auto;
-        padding: 100px 0;
+        padding: 55px 0;
         color: #424242;
            .section-headline{
             margin-bottom: 24px;
@@ -17,11 +17,13 @@
                .group-block{
                 padding-bottom: 50px;
                    img{
-                    background-color: cornflowerblue;
                     width: 100%;
                     height: 180px;
                     margin-bottom: 35px;
                     border-radius: 15px;
+                    background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
                    }
                    .business-title{
                     font-weight: 700;
