--- a/src/assets/css/footer/ipad.scss
+++ b/src/assets/css/footer/ipad.scss
@@ -59,6 +59,7 @@
                         padding: 30px;
 
                         .item-info {
+                            padding: 15px 0;
                             .content {}
 
                             .title {
