--- a/src/assets/css/footer/phone.scss
+++ b/src/assets/css/footer/phone.scss
@@ -31,7 +31,7 @@
 
                     .item-group {
                         width: 100%;
-                        padding: 30px;
+                        padding:15px 30px;
 
                         div {
                             font-size: 18px;
@@ -54,9 +54,10 @@
 
                     .info-wrap {
                         width: 100%;
-                        padding: 30px;
+                        padding:15px 30px;
 
                         .item-info {
+                            padding: 15px 0;
                             .content {}
 
                             .title {
