--- a/src/assets/css/footer/pro.scss
+++ b/src/assets/css/footer/pro.scss
@@ -60,6 +60,7 @@
                         padding: 30px;
 
                         .item-info {
+                            padding: 15px 0;
                             .content {}
 
                             .title {
