--- a/src/assets/css/footer/pc.scss
+++ b/src/assets/css/footer/pc.scss
@@ -47,7 +47,7 @@
                             a {
                                 display: inline-block;
                                 width: 100%;
-                                margin-bottom: 17px;
+                                padding: 15px 0;
                             }
                         }
                     }
