--- a/src/assets/css/footer/pro.scss
+++ b/src/assets/css/footer/pro.scss
@@ -43,7 +43,7 @@
                             a {
                                 display: inline-block;
                                 width: 100%;
-                                margin-bottom: 17px;
+                                padding: 15px 0;
                             }
                         }
                     }
