--- a/src/assets/css/footer/phone.scss
+++ b/src/assets/css/footer/phone.scss
@@ -5,6 +5,10 @@
         color: #666666;
         box-sizing: border-box;
         background-color: #e5a6ec78;
+        background-image: url('~@/assets/img/footer.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
 
         .feedback-container {
             position: relative;
