--- a/src/assets/css/use/phone.scss
+++ b/src/assets/css/use/phone.scss
@@ -14,7 +14,8 @@
     }
 .backuse{
     width: 100%;
-    background-color: #63f96140;
+    // background-color: #63f96140;
+    background-color: #dfdfdf;
     margin: 0 auto;
     padding-left: 16px;
     padding-right: 16px;
