--- a/src/assets/css/about/ipad.scss
+++ b/src/assets/css/about/ipad.scss
@@ -3,6 +3,12 @@
         margin-top: 45px;
         width: 100%;
         background-color: #7fff005c;
+        background-image: url('~@/assets/img/textArea.jpg');
+        // background-size: 100%;
+        background-repeat: no-repeat;
+            background-position: center;
+            // background-size: cover;
+            background-size: 100% 100%;
         
         .feature{
             width: 66%;
