--- a/src/assets/css/about/pc.scss
+++ b/src/assets/css/about/pc.scss
@@ -2,7 +2,12 @@
     .about {
         margin-top: 45px;
         width: 100%;
-        background-color: #7fff005c;
+        // background-color: #7fff005c;
+        background-image: url('~@/assets/img/textArea.jpg');
+        // background-size: 100%;
+        background-repeat: no-repeat;
+            background-position: center;
+            background-size: 100%;
         
         .feature{
             width: 66%;
