--- a/src/assets/css/footer/mini.scss
+++ b/src/assets/css/footer/mini.scss
@@ -6,6 +6,11 @@
         color: #666666;
         box-sizing: border-box;
         background-color: #e5a6ec78;
+        background-image: url('~@/assets/img/footer.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        // background-size: cover;
+        background-size: 100% 100%;
 
         .feedback-container {
             position: relative;
