--- a/src/assets/css/header/ipad.scss
+++ b/src/assets/css/header/ipad.scss
@@ -32,9 +32,10 @@
             height: 428px;
             background-color: #AC7AF7;
             // background-image: url(https://goairmart.com/static/home/homepage_hero_image.jpg);
-            // background-repeat: no-repeat;
-            // background-position: center;
-            // background-size: cover;
+            background-image: url('~@/assets/img/Banner.jpg');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
             position: relative;
 
             .text {
