--- a/src/assets/css/use/ipad.scss
+++ b/src/assets/css/use/ipad.scss
@@ -14,7 +14,9 @@
     }
 .backuse{
     width: 100%;
-    background-color: #63f96140;
+    // background-color: #63f96140;
+    background-color: #dfdfdf;
+    
     
     .use {
         padding: 70px 0;
