--- a/src/assets/css/use/pc.scss
+++ b/src/assets/css/use/pc.scss
@@ -15,7 +15,8 @@
     }
 .backuse{
     width: 100%;
-    background-color: #63f96140;
+    // background-color: #63f96140;
+    background-color: #dfdfdf;
     
     
     .use {
