--- a/src/assets/css/about/pro.scss
+++ b/src/assets/css/about/pro.scss
@@ -19,7 +19,7 @@
         
 
         .feature-info {
-            margin-bottom: 24px;
+            // margin-bottom: 24px;
             font-weight: 900;
             font-size: 36px;
             text-align: center;
