--- a/src/assets/css/header/ipad.scss
+++ b/src/assets/css/header/ipad.scss
@@ -14,14 +14,14 @@
 
             a {
                 span {
-                    color: #ffffff;
+                    color: #0c0c0c;
                     font-size: 18px;
                     font-weight: 700;
                 }
             }
 
             span {
-                color: #ffffff;
+                color: #111111;
                 font-size: 18px;
                 font-weight: 700;
             }
@@ -47,6 +47,7 @@
                     margin-bottom: 28px;
                     font-weight: 900;
                     font-size: 49px;
+                    color: black;
 
                 }
 
@@ -55,13 +56,14 @@
                     font-weight: 900;
                     font-size: 20px;
                     margin-left: 5%;
+                    color: black;
                 }
                 .home-btn{
                     position: absolute;
-                    right: 10%;
+                    right: 6%;
+                    bottom: 9%;
                     font-weight: 700;
                     font-size: 20px;
-                   
                     padding: 12px 32px;
                     border-radius: 25.5px;
                     background-color: #6fc16d;
