--- a/src/assets/css/about/pc.scss
+++ b/src/assets/css/about/pc.scss
@@ -7,7 +7,7 @@
         // background-size: 100%;
         background-repeat: no-repeat;
             background-position: center;
-            background-size: 100%;
+            background-size: 100% 100%;
         
         .feature{
             width: 66%;
