--- a/src/assets/css/header/mini.scss
+++ b/src/assets/css/header/mini.scss
@@ -15,14 +15,14 @@
 
             a {
                 span {
-                    color: #ffffff;
+                    color: #0c0c0c;
                     font-size: 18px;
                     // font-weight: 700;
                 }
             }
 
             span {
-                color: #ffffff;
+                color: #0c0c0c;
                 font-size: 18px;
                 // font-weight: 700;
             }
@@ -48,7 +48,7 @@
                     margin-bottom: 24px;
                     font-weight: 900;
                     font-size: 36px;
-
+                    color: black;
                 }
 
                 .desc {
@@ -56,14 +56,15 @@
                     font-weight: 900;
                     font-size: 14px;
                     margin-left: 5%;
+                    color: black;
                 }
                 .home-btn{
                     position: absolute;
-                    right: 10%;
+                    right: 1%;
+                    bottom: 4%;
                     font-weight: 700;
                     font-size: 14px;
-                   
-                    padding: 12px 32px;
+                    padding: 6px 8px;
                     border-radius: 25.5px;
                     background-color: #6fc16d;
                     display: inline-block;
