--- a/src/assets/css/header/pc.scss
+++ b/src/assets/css/header/pc.scss
@@ -15,14 +15,14 @@
 
             a {
                 span {
-                    color: #ffffff;
+                    color: #0c0c0c;
                     font-size: 18px;
                     font-weight: 700;
                 }
             }
 
             span {
-                color: #ffffff;
+                color: #0c0c0c;
                 font-size: 18px;
                 font-weight: 700;
             }
@@ -48,7 +48,7 @@
                     margin-bottom: 24px;
                     font-weight: 900;
                     font-size: 72px;
-
+                    color: black;
                 }
 
                 .desc {
@@ -56,13 +56,14 @@
                     font-weight: 900;
                     font-size: 20px;
                     margin-left: 5%;
+                    color: black;
                 }
                 .home-btn{
                     position: absolute;
                     right: 10%;
                     font-weight: 700;
                     font-size: 20px;
-                   
+                   bottom: 10%;
                     padding: 12px 32px;
                     border-radius: 25.5px;
                     background-color: #6fc16d;
