--- a/src/assets/css/header/pro.scss
+++ b/src/assets/css/header/pro.scss
@@ -16,14 +16,14 @@
     
                 a {
                     span {
-                        color: #ffffff;
+                        color: #0c0c0c;
                         font-size: 18px;
                         font-weight: 700;
                     }
                 }
     
                 span {
-                    color: #ffffff;
+                    color: #0c0c0c;
                     font-size: 18px;
                     font-weight: 700;
                 }
@@ -49,7 +49,7 @@
                         margin-bottom: 24px;
                         font-weight: 900;
                         font-size: 72px;
-    
+                        color: black;
                     }
     
                     .desc {
@@ -57,13 +57,14 @@
                         font-weight: 900;
                         font-size: 20px;
                         margin-left: 5%;
+                        color: black;
                     }
                     .home-btn{
                         position: absolute;
-                        right: 10%;
+                        right: 8%;
                         font-weight: 700;
                         font-size: 20px;
-                       
+                       bottom: 10%;
                         padding: 12px 32px;
                         border-radius: 25.5px;
                         background-color: #6fc16d;
