--- a/src/assets/css/business/pro.scss
+++ b/src/assets/css/business/pro.scss
@@ -36,6 +36,8 @@
                    .business-desc{
                     font-size: 18px;
                     color: #767676;
+                    font-family: flqd-n7, adobe-notdef;
+                    font-style: normal;
                         span{
     
                         }
