--- a/src/assets/css/header/mini.scss
+++ b/src/assets/css/header/mini.scss
@@ -1,5 +1,18 @@
 
 @media screen and (max-width: 479px) {
+    .clearfix:after,
+    .clearfix:before {
+        content: "";
+        display: table;
+    }
+
+    .clearfix:after {
+        clear: both;
+    }
+
+    .clearfix {
+        *zoom: 1;
+    }
     .home-header {
         z-index: 1;
         width: 100%;
