--- a/src/assets/css/header/ipad.scss
+++ b/src/assets/css/header/ipad.scss
@@ -1,4 +1,17 @@
 @media screen and(min-width: 768px) and (max-width: 959px) {
+    .clearfix:after,
+    .clearfix:before {
+        content: "";
+        display: table;
+    }
+
+    .clearfix:after {
+        clear: both;
+    }
+
+    .clearfix {
+        *zoom: 1;
+    }
     .home-header {
         z-index: 1;
         width: 100%;
