--- a/src/assets/css/header/pc.scss
+++ b/src/assets/css/header/pc.scss
@@ -1,4 +1,17 @@
 @media screen and (min-width: 1200px) {
+    .clearfix:after,
+    .clearfix:before {
+        content: "";
+        display: table;
+    }
+
+    .clearfix:after {
+        clear: both;
+    }
+
+    .clearfix {
+        *zoom: 1;
+    }
     .home-header {
         z-index: 1;
         width: 100%;
