--- a/src/assets/css/header/pro.scss
+++ b/src/assets/css/header/pro.scss
@@ -1,6 +1,18 @@
 @media screen and(min-width: 960px) and (max-width: 1199px) {
  
-   
+    .clearfix:after,
+    .clearfix:before {
+        content: "";
+        display: table;
+    }
+
+    .clearfix:after {
+        clear: both;
+    }
+
+    .clearfix {
+        *zoom: 1;
+    }
         .home-header {
             z-index: 1;
             width: 100%;
