--- a/src/assets/css/footer/mini.scss
+++ b/src/assets/css/footer/mini.scss
@@ -46,7 +46,7 @@
                             a {
                                 display: inline-block;
                                 width: 100%;
-                                padding: 15px 0;
+                                // padding: 15px 0;
                             }
                         }
                     }
