--- a/src/assets/css/footer/phone.scss
+++ b/src/assets/css/footer/phone.scss
@@ -44,7 +44,7 @@
                             a {
                                 display: inline-block;
                                 width: 100%;
-                                padding: 15px 0;
+                                // padding: 15px 0;
                             }
                         }
                     }
