--- a/src/assets/css/menu/mini.scss
+++ b/src/assets/css/menu/mini.scss
@@ -5,7 +5,8 @@
         height: 60px;
         justify-content: space-between;
         box-sizing: border-box;
-        padding: 10px 20px;
+        padding: 10px 10%;
+        font-size: 18px;
         .logo{
             width: 120px;
             height: 38px;
