--- a/src/assets/css/footer/phone.scss
+++ b/src/assets/css/footer/phone.scss
@@ -69,7 +69,8 @@
                             .content {}
 
                             .title {
-                                color: #aaaaaa;
+                                // color: #aaaaaa;
+                                color: #666666;
                                 font-size: 14px;
                                 font-weight: 300;
                                 line-height: 1.5em;
