--- a/src/assets/css/footer/mini.scss
+++ b/src/assets/css/footer/mini.scss
@@ -23,13 +23,13 @@
                 }
                 .Logo {
                     margin-left: 10%;
-                    width: 200px;
-                    height: 50px;
+                    width: 260px;
+                    height: 70px;
                     margin-top: 50px;
-                    background-image: url('~@/assets/img/logo.jpg');
+                    background-image: url('~@/assets/img/logoPNG.png');
                     background-repeat: no-repeat;
                     background-position: center;
-                    background-size: 100%;
+                    background-size: 100% 100%;
                 }
 
                 .contact {
