--- a/src/assets/css/business/phone.scss
+++ b/src/assets/css/business/phone.scss
@@ -37,6 +37,7 @@
                     font-size: 14px;
                     color: #767676;
                     font-family: flqd-n7, adobe-notdef;
+                    font-family: roboto;
                     font-style: normal;
                         span{
     
