--- a/src/assets/css/business/ipad.scss
+++ b/src/assets/css/business/ipad.scss
@@ -37,8 +37,8 @@
                    .business-desc{
                     font-size: 18px;
                     color: #767676;
-                    font-family: flqd-n7, adobe-notdef;
-                    font-style: normal;
+                    font-family: roboto;
+                    // font-style: normal;
                         span{
     
                         }
