--- a/src/assets/css/business/mini.scss
+++ b/src/assets/css/business/mini.scss
@@ -37,7 +37,7 @@
                    .business-desc{
                     font-size: 14px;
                     color: #767676;
-                    font-family: flqd-n7, adobe-notdef;
+                    font-family: roboto;
                     font-style: normal;
                         span{
     
