--- a/src/assets/css/business/pc.scss
+++ b/src/assets/css/business/pc.scss
@@ -36,7 +36,7 @@
                .business-desc{
                 font-size: 18px;
                 color: #767676;
-                font-family: flqd-n7, adobe-notdef;
+                font-family: roboto;
                 font-style: normal;
                     span{
 
