--- a/src/assets/css/business/mini.scss
+++ b/src/assets/css/business/mini.scss
@@ -38,7 +38,7 @@
                     font-size: 14px;
                     color: #767676;
                     font-family: roboto;
-                    font-style: normal;
+                    // font-style: normal;
                         span{
     
                         }
