--- a/src/assets/css/business/pc.scss
+++ b/src/assets/css/business/pc.scss
@@ -37,7 +37,7 @@
                 font-size: 18px;
                 color: #767676;
                 font-family: roboto;
-                font-style: normal;
+                // font-style: normal;
                     span{
 
                     }
