--- a/src/assets/css/about/mini.scss
+++ b/src/assets/css/about/mini.scss
@@ -8,8 +8,8 @@
         // background-size: 100%;
         background-repeat: no-repeat;
             background-position: center;
-            // background-size: cover;
-            background-size: 100% 100%;
+            background-size: cover;
+            // background-size: 100% 100%;
         .feature{
             width: 66%;
         margin: 0 auto;
