--- a/src/assets/css/header/mini.scss
+++ b/src/assets/css/header/mini.scss
@@ -43,13 +43,13 @@
 
         .home-part-img {
             width: 100%;
-            height: 300px;
+            height: 210px;
             background-color: #AC7AF7;
             // background-image: url(https://goairmart.com/static/home/homepage_hero_image.jpg);
             background-image: url('~@/assets/img/Banner.jpg');
             background-repeat: no-repeat;
             background-position: center;
-            background-size: cover;
+            background-size: 100% 100%;
             position: relative;
 
             .text {
@@ -73,7 +73,7 @@
                 }
                 .home-btn{
                     position: absolute;
-                    right: 1%;
+                    right: 7%;
                     bottom: 4%;
                     font-weight: 700;
                     font-size: 14px;
