--- a/src/assets/css/header/mini.scss
+++ b/src/assets/css/header/mini.scss
@@ -46,7 +46,7 @@
             height: 210px;
             background-color: #AC7AF7;
             // background-image: url(https://goairmart.com/static/home/homepage_hero_image.jpg);
-            background-image: url('~@/assets/img/Banner.jpg');
+            background-image: url('~@/assets/img/Banner0520.jpg');
             background-repeat: no-repeat;
             background-position: center;
             background-size: 100% 100%;
