--- a/src/assets/css/header/pc.scss
+++ b/src/assets/css/header/pc.scss
@@ -46,10 +46,10 @@
             height: 500px;
             background-color: #AC7AF7;
             // background-image: url(https://goairmart.com/static/home/homepage_hero_image.jpg);
-            background-image: url('~@/assets/img/Banner.jpg');
+            background-image: url('~@/assets/img/Banner0520.jpg');
             background-repeat: no-repeat;
             background-position: center;
-            background-size: cover;
+            background-size: 100% 100%;
             position: relative;
 
             .text {
