--- a/src/assets/css/menu/mini.scss
+++ b/src/assets/css/menu/mini.scss
@@ -9,7 +9,8 @@
         font-size: 18px;
         .logo{
             width: 180px;
-            height: 38px;
+            height: 54px;
+            margin-top: -7px;
             img{
                 width: 100%;
                 height: 100%;
@@ -39,7 +40,7 @@
         .menubox{
             position: fixed;
             height: 100%;
-            width: 50%;
+            width: 60%;
             right: 0;
             z-index: 10;
             background: #fff;
