--- a/src/assets/css/header/phone.scss
+++ b/src/assets/css/header/phone.scss
@@ -42,13 +42,13 @@
 
         .home-part-img {
             width: 100%;
-            height: 375px;
+            height: 280px;
             background-color: #AC7AF7;
             // background-image: url(https://goairmart.com/static/home/homepage_hero_image.jpg);
-            background-image: url('~@/assets/img/Banner.jpg');
+            background-image: url('~@/assets/img/Banner0520.jpg');
             background-repeat: no-repeat;
             background-position: center;
-            background-size: cover;
+            background-size: 100% 100%;
             position: relative;
 
             .text {
@@ -72,7 +72,7 @@
                 }
                 .home-btn{
                     position: absolute;
-                    right: 3%;
+                    right: 8%;
                     bottom: 5%;
                     font-weight: 700;
                     font-size: 16px;
