--- a/src/assets/css/menu/phone.scss
+++ b/src/assets/css/menu/phone.scss
@@ -8,7 +8,8 @@
         font-size: 18px;
         .logo{
             width: 180px;
-            height: 38px;
+            height: 54px;
+            margin-top: -7px;
             img{
                 width: 100%;
                 height: 100%;
