--- a/src/assets/css/menu/mini.scss
+++ b/src/assets/css/menu/mini.scss
@@ -5,7 +5,7 @@
         height: 60px;
         justify-content: space-between;
         box-sizing: border-box;
-        padding: 10px 10%;
+        padding: 10px 10px;
         font-size: 18px;
         .logo{
             width: 180px;
