--- a/src/assets/css/footer/mini.scss
+++ b/src/assets/css/footer/mini.scss
@@ -1,7 +1,7 @@
 
 @media screen and (max-width: 479px) {
     .footer {
-        margin-top: 100px;
+        margin-top: 30px;
         word-spacing: normal;
         color: #666666;
         box-sizing: border-box;
@@ -9,8 +9,8 @@
         background-image: url('~@/assets/img/footer.jpg');
         background-repeat: no-repeat;
         background-position: center;
-        // background-size: cover;
-        background-size: 100% 100%;
+        background-size: cover;
+        // background-size: 100% 100%;
 
         .feedback-container {
             position: relative;
@@ -22,9 +22,9 @@
                     width: 100%;
                 }
                 .Logo {
-                    margin-left: 10%;
-                    width: 260px;
-                    height: 70px;
+                    margin-left: 5%;
+                    width: 230px;
+                    height: 60px;
                     margin-top: 50px;
                     background-image: url('~@/assets/img/logoPNG.png');
                     background-repeat: no-repeat;
@@ -67,13 +67,13 @@
                         padding:15px 30px;
 
                         .item-info {
-                            padding: 15px 0;
+                            padding-bottom: 15px;
                             .content {}
 
                             .title {
                                 // color: #aaaaaa;
                                 color: #666666;
-                                font-size: 14px;
+                                font-size: 18px;
                                 font-weight: 300;
                                 line-height: 1.5em;
                             }
