--- a/src/assets/css/footer/pc.scss
+++ b/src/assets/css/footer/pc.scss
@@ -30,7 +30,7 @@
                     background-image: url('~@/assets/img/logoPNG.png');
                     background-repeat: no-repeat;
                     background-position: center;
-                    background-size: 100% 100%;
+                    background-size: cover;
 
                 }
 
