--- a/src/assets/css/footer/pro.scss
+++ b/src/assets/css/footer/pro.scss
@@ -31,7 +31,7 @@
                     background-image: url('~@/assets/img/logoPNG.png');
                     background-repeat: no-repeat;
                     background-position: center;
-                    background-size: 100% 100%;
+                    background-size: cover;
                 }
 
                 .contact {
